# padrend-project

PADrend/: .gitignore  CMakeLists.txt  PADrend.ekki  PADrendMain.cpp
PADrend/doc/: Doxyfile  Help.txt
PADrend/resources/: ReadMe.txt
PADrend/resources/CommonPresets/: 99_Restart.escript  AddFloorShadow.escript  AddHeader.escript  Boeing.escript  BudgetColorRenderer.escript  CodeBlocksUpdater.escript  CompareClassifications.escript  EClass_Generator.escript  InspectionState.escript  MeshCreation_EdgeSubdivisionSpheres.escript  MeshCreation_PlatonicSolids.escript  MultiplyScene.escript  PointSizeState.escript  RecordVideo.escript  WireframeOverlayState.escript
PADrend/resources/Development/: uncrustify.cfg
PADrend/resources/Diagrams/: Camera_Path_Rendering_Time.R  Camera_Path_Rendering_Time_Small.R  Camera_Path_Visible_Triangles.R  Camera_Path_Visual_Quality.R  Camera_Path_Visual_Quality_Distribution.R  File_Size_Distribution.R
PADrend/resources/Documentation/: PADrend-statsvn-config  PADrend-statsvn.sh  PADrend.mm
PADrend/resources/Documentation/Exercise Pyramid/: ExercisePyramid.tex  exercise1_solution.escript  exercise2_solution.escript  exercise3_solution.escript
PADrend/resources/Installer/: Packaging.cmake
PADrend/resources/Installer/Bundle_OSX/: Info.plist  PADrendIcon.icns  start_padrend.sh
PADrend/resources/Installer/NSIS_windows/: Notice.txt  PADrend.nsi  PP.nsi  PP_mmf.nsi  WSCPaperScene.nsi
PADrend/resources/Windows/: Resource.rc  Resource.rc.in
modules/E_Geometry/: CMakeLists.txt  ELibGeometry.cpp  ELibGeometry.h  E_Box.cpp  E_Box.h  E_Frustum.cpp  E_Frustum.h  E_GeometryConfig.cmake.in  E_Line3.cpp  E_Line3.h  E_Matrix3x3.cpp  E_Matrix3x3.h  E_Matrix4x4.cpp  E_Matrix4x4.h  E_Plane.cpp  E_Plane.h  E_PointOctree.cpp  E_PointOctree.h  E_Quaternion.cpp  E_Quaternion.h  E_Ray3.cpp  E_Ray3.h  E_Rect.cpp  E_Rect.h  E_SRT.cpp  E_SRT.h  E_Segment3.cpp  E_Segment3.h  E_Sphere.cpp  E_Sphere.h  E_Tetrahedron.cpp  E_Tetrahedron.h  E_Triangle.cpp  E_Triangle.h  E_Vec2.cpp  E_Vec2.h  E_Vec3.cpp  E_Vec3.h  E_Vec4.cpp  E_Vec4.h  (+1 more)
modules/E_MinSG/: CMakeLists.txt  ELibMinSG.cpp  ELibMinSG.h  E_MinSGConfig.cmake.in  header.txt
modules/E_MinSG/Core/: E_FrameContext.cpp  E_FrameContext.h  E_RenderParam.cpp  E_RenderParam.h  E_Statistics.cpp  E_Statistics.h
modules/E_MinSG/Core/Behaviours/: E_AbstractBehaviour.cpp  E_AbstractBehaviour.h  E_Behavior.cpp  E_Behavior.h  E_BehaviorStatus.cpp  E_BehaviorStatus.h  E_BehaviourManager.cpp  E_BehaviourManager.h  E_ScriptedBehavior.cpp  E_ScriptedBehavior.h
modules/E_MinSG/Core/Nodes/: E_AbstractCameraNode.cpp  E_AbstractCameraNode.h  E_CameraNode.cpp  E_CameraNode.h  E_CameraNodeOrtho.cpp  E_CameraNodeOrtho.h  E_GeometryNode.cpp  E_GeometryNode.h  E_GroupNode.cpp  E_GroupNode.h  E_LightNode.cpp  E_LightNode.h  E_ListNode.cpp  E_ListNode.h  E_Node.cpp  E_Node.h
modules/E_MinSG/Core/States/: E_AlphaTestState.cpp  E_AlphaTestState.h  E_BlendingState.cpp  E_BlendingState.h  E_CullFaceState.cpp  E_CullFaceState.h  E_GroupState.cpp  E_GroupState.h  E_LightingState.cpp  E_LightingState.h  E_MaterialState.cpp  E_MaterialState.h  E_NodeRendererState.cpp  E_State.h  (+14 more)
modules/E_MinSG/Ext/: ELibMinSGExt.cpp  ELibMinSGExt.h
modules/E_MinSG/Helper/: E_GraphVizOutput.cpp  E_GraphVizOutput.h  E_StdNodeVisitors.cpp  E_StdNodeVisitors.h
modules/E_MinSG/SceneManagement/: E_ImportContext.cpp  E_ImportContext.h  E_SceneManagement.cpp  E_SceneManagement.h  E_SceneManager.cpp  E_SceneManager.h
modules/E_Rendering/: CMakeLists.txt  ELibRendering.cpp  ELibRendering.h  E_BufferObject.cpp  E_BufferObject.h  E_Draw.cpp  E_Draw.h  E_FBO.cpp  E_FBO.h  E_OcclusionQuery.cpp  E_OcclusionQuery.h  E_ParameterStructs.cpp  E_ParameterStructs.h  E_RenderingConfig.cmake.in  E_RenderingContext.cpp  E_RenderingContext.h  E_StatisticsQuery.cpp  E_StatisticsQuery.h  E_TextRenderer.cpp  E_TextRenderer.h  header.txt
modules/E_Rendering/Mesh/: E_Mesh.cpp  E_Mesh.h  E_VertexAccessor.cpp  E_VertexAccessor.h  E_VertexAttribute.cpp  E_VertexAttribute.h  E_VertexAttributeAccessors.cpp  E_VertexAttributeAccessors.h  E_VertexDescription.cpp  E_VertexDescription.h
modules/E_Rendering/MeshUtils/: E_ConnectivityAccessor.cpp  E_ConnectivityAccessor.h  E_MeshBuilder.cpp  E_MeshBuilder.h  E_MeshUtils.cpp  E_MeshUtils.h  E_PlatonicSolids.cpp  E_PlatonicSolids.h  E_PrimitiveShapes.cpp  E_PrimitiveShapes.h  E_TriangleAccessor.cpp  E_TriangleAccessor.h
modules/E_Rendering/Shader/: E_Shader.cpp  E_Shader.h  E_Uniform.cpp  E_Uniform.h
modules/E_Rendering/Texture/: E_Texture.cpp  E_Texture.h  E_TextureUtils.cpp  E_TextureUtils.h
modules/E_Sound/: CMakeLists.txt  ELibSound.cpp  ELibSound.h  E_Buffer.cpp  E_Buffer.h  E_Listener.cpp  E_Listener.h  E_SoundConfig.cmake.in  E_Source.cpp  E_Source.h  header.txt
modules/E_Util/: CMakeLists.txt  ELibUtil.cpp  ELibUtil.h  E_DestructionMonitor.cpp  E_DestructionMonitor.h  E_FileName.cpp  E_FileName.h  E_MicroXMLReader.cpp  E_MicroXMLReader.h  E_ObjectFactory.h  E_ProgressIndicator.cpp  E_ProgressIndicator.h  E_Timer.cpp  E_Timer.h  E_UpdatableHeap.cpp  E_UpdatableHeap.h  E_UtilConfig.cmake.in  E_Utils.cpp  E_Utils.h  header.txt
modules/E_Util/Graphics/: E_Bitmap.cpp  E_Bitmap.h  E_BitmapUtils.cpp  E_BitmapUtils.h  E_Color.cpp  E_Color.h  E_PixelAccessor.cpp  E_PixelAccessor.h
modules/E_Util/IO/: E_FileLocator.cpp  E_FileLocator.h  E_IOStream.cpp  E_IOStream.h  E_TemporaryDirectory.cpp  E_TemporaryDirectory.h
modules/E_Util/Network/: E_ClockSynchronizer.cpp  E_ClockSynchronizer.h  E_DataBroadcaster.cpp  E_DataBroadcaster.h  E_DataConnection.cpp  E_DataConnection.h  E_Network.cpp  E_Network.h  E_NetworkTCP.cpp  E_NetworkTCP.h  E_NetworkUDP.cpp  E_NetworkUDP.h
modules/E_Util/UI/: E_Event.cpp  E_Event.h  E_EventContext.cpp  E_EventContext.h  E_EventQueue.cpp  E_EventQueue.h  E_SplashScreen.cpp  E_SplashScreen.h  E_UI.cpp  E_UI.h  E_Window.cpp  E_Window.h
modules/Sound/: Buffer.cpp  Buffer.h  CMakeLists.txt  Listener.cpp  Listener.h  Sound.cpp  Sound.h  SoundConfig.cmake.in  SoundInternals.h  Source.cpp  Source.h  header.txt
(+295 files in other folders)
